@@ -1,3 +1,9 @@
+2007-09-27  Francois Dumont  <dums@users.sourceforge.net>
+
+	* src/facets_byname.cpp: In collate::do_transform, consider
+	low == high as a special case, returns empty string in this
+	case.
+
 2007-09-27  Petr Ovtchenkov  <complement@users.sourceforge.net>
 
 	* test/unit/find_test.cpp: array initialization missed.
